# ayiou

./: Cargo.toml  README.md
ayiou/: Cargo.toml
ayiou-core/: Cargo.toml
ayiou-core/src/: lib.rs
ayiou-extra/: Cargo.toml
ayiou-macros/: Cargo.toml
ayiou-provider/: Cargo.toml
ayiou/src/: cli.rs  main.rs  server.rs
ayiou/src/api/: mod.rs
ayiou/src/commands/: mod.rs  server.rs  version.rs
src/: cli.rs  error.rs  file_info.rs  lib.rs  main.rs
src/api/: mod.rs
src/commands/: mod.rs  start.rs
src/provider/: mod.rs
