[workspace]
resolver = "3"
members = [
    "ayiou",
    "ayiou-core",
    "ayiou-extra",
    "ayiou-macros",
    "ayiou-provider",
]

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
tracing-appender = { version = "0.2.3" }

[profile.dev]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 256
incremental = true
panic = "unwind"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
incremental = false
panic = "abort"
strip = true
