[package]
name = "ayiou"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
rayon = "1.11.0"
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "fmt",
    "json",
    "chrono",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.143"
anyhow = "1.0.99"
thiserror = "2.0.16"
async-trait = "0.1.87"
chrono = { version = "0.4.41", features = ["serde"] }
tempfile = "3.21.0"
axum = { version = "0.8.4", features = ["multipart", "ws"] }
axum-extra = { version = "0.10.1", features = ["multipart", "typed-header"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
mimalloc = "0.1.47"

[target.'cfg(not(target_os = "windows"))'.dependencies]
fuser = { version = "0.15.1", features = ["serializable", "macfuse-4-compat"] }

[target.'cfg(target_os = "windows")'.dependencies]
dokan = "0.3.1"
dokan-sys = "0.3.1"

[profile.dev]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 256
incremental = true
panic = "unwind"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
incremental = false
panic = "abort"
strip = true
