[package]
name = "ayiou"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "fmt",
    "json",
] }
tracing-appender = { workspace = true }
console = "0.16.0"
dialoguer = "0.11.0"
indicatif = { version = "0.18.0", features = [
    "improved_unicode",
    "rayon",
    "tokio",
] }
tempfile = "3.20.0"
clap = { version = "4.5.42", features = ["derive"] }
clap_complete = "4.5.39"
axum = { version = "0.8.4", features = ["multipart", "ws"] }
axum-extra = { version = "0.10.1", features = ["multipart", "typed-header"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
mimalloc = "0.1.47"
anyhow = "1.0.95"
